--- a/styles/style.styl
+++ b/styles/style.styl
@@ -49,5 +49,6 @@ footer
       border-bottom 5px solid darken(pink, 30%)
       transform scale(1.05) 
       transition all 300ms ease 
-  .elegida
-    background lighten(pink, 50%)
+
+.elegida
+  background lighten(pink, 50%) !important
