--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,13 @@ main .bolilla {
   line-height: 65px;
   border-radius: 65px;
 }
+main .elegida {
+  background: #ff8ac9 !important;
+}
+main .ultima {
+  border: 1px solid #c10068;
+  animation: pulse 1s infinite;
+}
 footer {
   display: flex;
   justify-content: center;
@@ -49,6 +56,47 @@ footer .tombola:hover {
   transform: scale(1.05);
   transition: all 300ms ease;
 }
-footer .elegida {
-  background: #ff8ac9;
+@-moz-keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-o-keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
