--- a/styles/style.styl
+++ b/styles/style.styl
@@ -27,7 +27,12 @@ main
     background pink
     height bolSize
     line-height bolSize
-    border(bolSize)
+    borderRad(bolSize)
+  .elegida
+    background lighten(pink, 50%) !important
+  .ultima
+    border 1px solid darken(pink, 30%)
+    animation pulse 1s infinite
 
 footer 
   display flex
@@ -42,12 +47,19 @@ footer
     min-width 134px 
     line-height 4em
     background lighten(pink, 50%)
-    border()
+    borderRad()
     font-size 2em  
     transition all 300ms ease    
     &:hover
       border-bottom 5px solid darken(pink, 30%)
       transform scale(1.05) 
       transition all 300ms ease 
-  .elegida
-    background lighten(pink, 50%)
+
+@keyframes pulse
+  0%
+    transform scale(1)
+  50%
+    transform scale(1.1)
+  100%
+    transform scale(1)
+    
