--- a/styles/style.styl
+++ b/styles/style.styl
@@ -11,9 +11,12 @@
   font-size 15px
   font-weight bold
 
-body 
-  background gold
+html, body 
+  background gold 
   font-family firacode
+  display flex
+  flex-direction column
+  min-height 100vh
 
 main
   text-align center
@@ -35,10 +38,10 @@ main
     animation pulse 1s infinite
 
 footer 
+  flex 1
   display flex
   justify-content center
   align-items flex-start 
-  height 100vh
   background rgba(pink, .9)
 
   .tombola
